// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert[Base] should render correctly  1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body c-ryzz40 soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="cxs5hpu soui-descriptions-inline-table"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Name
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="cxs5hpu soui-descriptions-inline-table"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Residence
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="cxs5hpu soui-descriptions-inline-table"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Address
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  Yingdu Building
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="cxs5hpu soui-descriptions-inline-table"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Mobile
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="cxs5hpu soui-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Hometown
                  <span
                    style="padding-inline-start: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about alignment 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body cfr4hfr soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body cfr4hfr soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
              colspan="3"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="padding-bottom: 2px;"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              colspan="2"
              style="padding-bottom: 2px;"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
              colspan="2"
            >
              187-2323-9834
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about arrangement 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="cuvzs0g soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        horizontal
      </span>
    </div>
    <div
      class="ceo7z38 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        vertical
      </span>
    </div>
    <div
      class="ceo7z38 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        inlineHorizontal
      </span>
    </div>
    <div
      class="ceo7z38 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        inlineVertical
      </span>
    </div>
  </div>
  <div
    class="cuvzs0g soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        auto
      </span>
    </div>
    <div
      class="ceo7z38 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        fixed
      </span>
    </div>
  </div>
  <div
    class="cuvzs0g soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        no border
      </span>
    </div>
    <div
      class="ceo7z38 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        border
      </span>
    </div>
  </div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body cfr4hfr soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Name
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Residence
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Address
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Yingdu Building
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Mobile
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Hometown
              <span
                style="padding-inline-start: 4px;"
              >
                :
              </span>
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about border 1`] = `
<div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body c-yj027l soui-descriptions-border c-h6b7fl soui-descriptions-table-layout-fixed cfr4hfr soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Hometown
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
    style="margin-bottom: 20px;"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body c-yj027l soui-descriptions-border c-h6b7fl soui-descriptions-table-layout-fixed cfr4hfr soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body c-yj027l soui-descriptions-border c-h6b7fl soui-descriptions-table-layout-fixed"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Address
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Mobile
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              colspan="4"
            >
              Hometown
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q0ppci soui-descriptions-value"
              colspan="4"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about colums 1`] = `
<div
  style="margin-bottom: -12px;"
>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body cfr4hfr soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Name
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Mobile
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
            >
              Residence
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body cfr4hfr soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              187-2323-9834
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about responsive 1`] = `
<div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body c-yj027l soui-descriptions-border cfr4hfr soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`Alert[Base] should render correctly about size 1`] = `
<div>
  <div
    class="cuvzs0g soui-radio-group"
    style="margin-bottom: 24px;"
  >
    <div
      class="ceo7z38 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        small
      </span>
    </div>
    <div
      class="ceo7z38 soui-radio-wrapper c875odf soui-radio-wrapper-checked"
    >
      <input
        checked=""
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        default
      </span>
    </div>
    <div
      class="ceo7z38 soui-radio-wrapper"
    >
      <input
        style="display: none;"
        tabindex="0"
        type="radio"
      />
      <span
        class="chkciqb soui-radio-indicator-wrapper"
      >
        <span
          class="cp0qpb4 soui-radio-indicator"
          tabindex="1"
        />
      </span>
      <span
        class="c-v30ja8 soui-radio-desc"
      >
        large
      </span>
    </div>
  </div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
    style="margin-bottom: 12px;"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body c-ryzz40 soui-descriptions-inline-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="cxs5hpu soui-descriptions-inline-table"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Name
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  Mai Mai
                </div>
              </div>
            </td>
            <td
              class="cxs5hpu soui-descriptions-inline-table"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Residence
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
            <td
              class="cxs5hpu soui-descriptions-inline-table"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Address
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  Yingdu Building,Zhichun Road,Beijing
                </div>
              </div>
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="cxs5hpu soui-descriptions-inline-table"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Mobile
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  187-2323-9834
                </div>
              </div>
            </td>
            <td
              class="cxs5hpu soui-descriptions-inline-table"
              colspan="2"
            >
              <div
                class="c-nrb7nu soui-descriptions-item"
              >
                <div
                  class="c-drllw6 soui-descriptions-label-inline"
                >
                  Hometown
                  <span
                    style="padding-left: 4px;"
                  >
                    :
                  </span>
                </div>
                <div
                  class="cwocy3r soui-descriptions-value-inline"
                >
                  Beijing
                </div>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
  <div
    class="ckdiwr4 soui-descriptions-wrapper"
  >
    <div
      class="c-vuj4k0 soui-descriptions-header"
    >
      <div
        class="c-q1o0x7 soui-descriptions-title"
      >
        User Info
      </div>
    </div>
    <div
      class="c-nrfsaj soui-descriptions-body c-yj027l soui-descriptions-border cfr4hfr soui-descriptions-horizontal"
    >
      <table
        cellpadding="0"
        cellspacing="0"
        class="c-q1ti5x soui-descriptions-table"
      >
        <tbody>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Name
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Mai Mai
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Residence
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Beijing
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Address
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              Yingdu Building,Zhichun Road,Beijing
            </td>
          </tr>
          <tr
            class="c-gszxm1 soui-descriptions-row"
          >
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Mobile
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
            >
              187-2323-9834
            </td>
            <td
              class="c-q67v2n soui-descriptions-label"
              style="text-align: end;"
            >
              Hometown
            </td>
            <td
              class="c-q0ppci soui-descriptions-value"
              colspan="3"
            >
              Beijing
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
